kubernetes_manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: online-event-booking-hamza-omer
