kubernetes_manifests/deployment-db-booking.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-db
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service-db
  template:
    metadata:
      labels:
        app: booking-service-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service-db
  namespace: online-event-booking-hamza-omer
spec:
  type: ClusterIP
  selector:
    app: booking-service-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
