kubernetes_manifests/deployment-db-event.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-db
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service-db
  template:
    metadata:
      labels:
        app: event-service-db
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: event-service-db
  namespace: online-event-booking-hamza-omer
spec:
  selector:
    app: event-service-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
