kubernetes_manifests/deployment-db-notification.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-db
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service-db
  template:
    metadata:
      labels:
        app: notification-service-db
    spec:
      containers:
        - name: notification-mongo
          image: mongo:5
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-db
  namespace: online-event-booking-hamza-omer
spec:
  type: ClusterIP
  selector:
    app: notification-service-db
  ports:
    - port: 27017
      targetPort: 27017
