kubernetes_manifests/deployment-db-user.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-db
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-db
  template:
    metadata:
      labels:
        app: user-service-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-db
  namespace: online-event-booking-hamza-omer
spec:
  selector:
    app: user-service-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
