kubernetes_manifests/deployment-service-event.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: cs4067_event-booking_i221218_hamza_omer_event-service
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-hamza-omer
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
