kubernetes_manifests/deployment-service-user.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking-hamza-omer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: cs4067_event-booking_i221218_hamza_omer_user-service:2.1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-hamza-omer
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
