kubernetes_manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: online-event-booking-hamza-omer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          # You can uncomment and use these paths internally if needed later
          # - path: /api/events(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: event-service
          #       port:
          #         number: 8002
          # - path: /api/bookings(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: booking-service
          #       port:
          #         number: 8001
          # - path: /api/notifications(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: notification-service
          #       port:
          #         number: 8003
